--- a/casfet/pubspec.yaml
+++ b/casfet/pubspec.yaml
@@ -61,8 +61,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - assets/images/
+  #   - assets/videos/
+  #   - assets/audio/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -91,5 +92,3 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 
 
-  # assets:
-  #   - assets/casfet-white.png
