--- a/casfet/pubspec.yaml
+++ b/casfet/pubspec.yaml
@@ -60,18 +60,19 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-    assets:
-    - assets/img/
+  assets:
+    - assets/img/casfet-white 1.png
+    - assets/img/login.png
 
-  fonts:
-    - family: Lato
-      fonts:
-        - asset: assets/fonts/Lato-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/Lato-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Lato-Bold.ttf
-          weight: 700
+  # fonts:
+    #- family: Lato
+     # fonts:
+      #  - asset: assets/fonts/Lato-Regular.ttf
+       #   weight: 400
+        #- asset: assets/fonts/Lato-SemiBold.ttf
+         # weight: 600
+        #- asset: assets/fonts/Lato-Bold.ttf
+         # weight: 700
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
